<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="version">Version</string>
    <string name="imei">IMEI</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="close">close</string>
    <string name="explanation">Application need permission to obtain information about phone state to display IMEI.</string>

    <string name="title_activity_main">AndroidLabs</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_menu_home">Home</string>
    <string name="nav_menu_profile">Profile</string>
    <string name="nav_menu_rss">RSS</string>

    <string name="auth_button_login">Login</string>
    <string name="auth_button_register">Register</string>
    <string name="auth_button_back_to_login">Back to login</string>
    <string name="auth_button_create_new_account">Create new account</string>
    <string name="auth_label_new_account">New account</string>
    <string name="auth_label_login">Login</string>
    <string name="auth_field_email">Email address</string>
    <string name="auth_field_password">Password</string>
    <string name="auth_field_confirm_password">Confirm password</string>

    <string name="leave_from_profile_edit">Leave editing without saving?</string>

    <string name="action_settings">Settings</string>
    <string name="auth_login_error">Invalid login or password</string>
    <string name="auth_email_error">Incorrect email</string>
    <string name="auth_error_message">Some error occurred.</string>

    <string name="profile_button_edit">Edit</string>
    <string name="profile_button_logout">Logout</string>
    <string name="profile_phone">Phone</string>
    <string name="profile_email">Email</string>
    <string name="profile_first_name">First name</string>
    <string name="profile_last_name">Last name</string>
    <string name="profile_show_error_message">Some error occurred.</string>

    <string name="profile_edit_button_save">Save</string>
    <string name="profile_edit_select_action">Select action</string>
    <string name="profile_edit_capture_from_camera">Capture photo from camera</string>
    <string name="profile_edit_select_from_gallery">Select photo from gallery</string>
    <string name="profile_edit_error_message">Some error occurred.</string>

    <string name="hello_home_fragment">Home</string>
    <string name="hello_profile_fragment">Profile</string>
    <string name="hello_rss_fragment">Rss</string>

    <string name="title_activity_rss_web_view">RssWebViewActivity</string>

    <string name="rss_feed_correct_url_request">You need to specify correct rss link</string>
    <string name="rss_feed_loading_error_message">Loading failed.</string>
    <string name="rss_feed_incorrect_url">Incorrect RssFeed link</string>
    <string name="rss_feed_connection_error">No internet connection</string>
    <string name="rss_feed_welcome">Welcome to rss reader!</string>
    <string name="rss_feed_preferences_last_userId">Last user id</string>
    <string name="rss_feed_preferences_rssUrl">Rss url</string>
    <string name="rss_feed_success_load_from_internet">Feed loaded from internet</string>
    <string name="rss_feed_success_load_from_cache">Feed loaded from cache</string>
    <string name="rss_feed_menu_change_source">Change rss source</string>
    <string name="rss_feed_loading">Loading...</string>

    <string name="rss_input_dialog_source_example">http://rss_sourse.xml</string>
    <string name="leave">Leave</string>
    <string name="stay">Stay</string>
</resources>
