<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="173dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="173dp"
                android:text="@string/auth_label_login"
                android:textAlignment="center"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/emailField"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/auth_field_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:ems="10"
                android:hint="@string/auth_field_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="8dp"
                android:text="@string/auth_button_login" />

            <Button
                android:id="@+id/createNewUserButton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="8dp"
                android:text="@string/auth_button_create_new_account" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>