<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileEditFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="visible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileEditImageView"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:src="@mipmap/ic_launcher_round" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/profileEditFirstNameView"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/profile_first_name" />

                <EditText
                    android:id="@+id/profileEditFirstNameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/profileEditLastNameView"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/profile_last_name" />

                <EditText
                    android:id="@+id/profileEditLastNameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/profileEditPhoneView"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/profile_phone" />

                <EditText
                    android:id="@+id/profileEditPhoneField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>

            <Button
                android:id="@+id/profileEditSaveButton"
                android:layout_gravity="center_horizontal"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/profile_edit_button_save" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>